fix: Adjust z-index for body and improve new installation welcome message handling

--- a/src/main/newtab/newtab.css
+++ b/src/main/newtab/newtab.css
@@ -110,7 +110,7 @@ body {
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 2px 6px 2px rgba(60, 64, 67, 0.15);
     padding: 16px;
     display: none;
-    z-index: 1001;
+    z-index: 3;
     overflow-y: scroll;
     color: var(--text-color);
 }
